--- a/res/values-et/values.xml
+++ b/res/values-et/values.xml
@@ -3,4 +3,77 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-et/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"Rakendusel <xliff:g id="APP_NAME">%1$s</xliff:g> on probleeme Google Play teenustega. Proovige uuesti."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-et/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Ühendatud ekraaniga <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Ühendamine ekraaniga <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Katkesta ühendus"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-et/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Reklaam"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Ülekandmine seadmesse %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Subtiitrid"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Subtiitrid pole saadaval"</string>
+<string name="cast_connecting_to_device" msgid="6769392312239056170">"Ühendamine ekraaniga <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Katkesta ühendus"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Samal ajal kui Cast\'i vastuvõtja esitab reklaami, kuvatakse kujutis"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Reklaam on pooleli …"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Albumi kujundus"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Reaalajas voog"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Laadimine …"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Jäta vahele"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Keri edasi"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Keri edasi kümme sekundit"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Keri edasi kolmkümmend sekundit"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Vaigista"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Peata"</string>
+<string name="cast_play" msgid="5906987965619702702">"Esita"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Keri tagasi"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Keri tagasi kümme sekundit"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Keri tagasi kolmkümmend sekundit"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Taasesituse otsimise juhtnupp"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Liigu järgmise üksuse juurde"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Liigu eelmise üksuse juurde"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Peata"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Peata reaalajas voogesitus"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Heli"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Tühista"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Subtiitrid"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"Rada <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Mitte ühtegi"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"OK"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Subtiitrid"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Tühista vaigistus"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-et/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Luba"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"Rakendus <xliff:g id="APP_NAME">%1$s</xliff:g> töötab ainult siis, kui lubate Google Play teenused."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Google Play teenuste lubamine"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Installi"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"Rakendus <xliff:g id="APP_NAME">%1$s</xliff:g> töötab ainult koos Google Play teenustega, mida teie seadmes pole."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Google Play teenuste hankimine"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Viga Google Play teenustes"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"Rakendus <xliff:g id="APP_NAME">%1$s</xliff:g> töötab ainult koos Google Play teenustega, mida teie seadmes ei toetata."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Värskenda"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"Rakenduse <xliff:g id="APP_NAME">%1$s</xliff:g> töötamiseks peate värskendama Google Play teenuseid."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Google Play teenuste värskendamine"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"Rakendus <xliff:g id="APP_NAME">%1$s</xliff:g> töötab ainult koos Google Play teenustega, mida praegu värskendatakse."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Vajalik on Google Play teenuste uus versioon. See värskendab end peagi."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Ava telefonis"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Logi sisse"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Logi sisse Google\'i kontoga"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-et/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"Salvesta kujutis"</string>
+<string name="s2" msgid="4550830452390689489">"Kas lubada reklaamil salvestada kujutis pildigaleriisse?"</string>
+<string name="s3" msgid="2435407834265420668">"Nõustu"</string>
+<string name="s4" msgid="9167523597401839819">"Keeldu"</string>
+<string name="s5" msgid="1566682516266724847">"Loo kalendrisündmus"</string>
+<string name="s6" msgid="5996672174517137271">"Kas lubada reklaamil luua kalendrisündmus?"</string>
+<string name="s7" msgid="7163549807207034258">"Testreklaam"</string>
 </resources>
