--- a/res/values-fr-rCA/values.xml
+++ b/res/values-fr-rCA/values.xml
@@ -3,4 +3,77 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-fr-rCA/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"L\'application <xliff:g id="APP_NAME">%1$s</xliff:g> éprouve un problème avec les services Google Play. Veuillez réessayer."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-fr-rCA/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Connecté à <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Connexion à <xliff:g id="NAME">%1$s</xliff:g> en cours…"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Déconnexion"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-fr-rCA/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Annonce"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Diffusion vers %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Sous-titres"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Aucun sous-titre"</string>
+<string name="cast_connecting_to_device" msgid="6769392312239056170">"Connexion à <xliff:g id="NAME">%1$s</xliff:g> en cours…"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Déconnexion"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Image affichée alors que le récepteur de diffusion présente une annonce"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Annonce en cours…"</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Image de l\'album"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Diffusion en direct"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Chargement en cours…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Ignorer"</string>
+<string name="cast_forward" msgid="7884080323096468593">"Suivant"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"Avancer de 10 secondes"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"Avancer de 30 secondes"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"Désactiver le son"</string>
+<string name="cast_pause" msgid="5308503786390460607">"Interrompre"</string>
+<string name="cast_play" msgid="5906987965619702702">"Lecture"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"Reculer"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"Reculer 10 secondes"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"Reculer 30 secondes"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Barre de défilement"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Aller à l\'élément suivant"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Aller à l\'élément précédent"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Arrêter"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Arrêter la diffusion en direct"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Audio"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Annuler"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Sous-titres"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"Suivre <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Aucun"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"OK"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Sous-titres"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"Réactiver le son"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-fr-rCA/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"Activer"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"<xliff:g id="APP_NAME">%1$s</xliff:g> ne fonctionnera pas tant que vous n\'aurez pas activé les services Google Play."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"Activer les services Google Play"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"Installer"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"<xliff:g id="APP_NAME">%1$s</xliff:g> ne fonctionnera pas sans les services Google Play, qui ne sont pas installés sur votre appareil."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Installer les services Google Play"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Erreur liée aux services Google Play"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"L\'application <xliff:g id="APP_NAME">%1$s</xliff:g> ne fonctionnera pas sans les services Google Play, qui ne sont pas pris en charge par votre appareil."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"Mettre à jour"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"<xliff:g id="APP_NAME">%1$s</xliff:g> ne fonctionnera pas tant que vous n\'aurez pas mis à jour les services Google Play."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"Mettre à jour les services Google Play"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"<xliff:g id="APP_NAME">%1$s</xliff:g> ne fonctionnera pas sans les services Google Play, qui sont actuellement mis à jour."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"La nouvelle version des services Google Play est nécessaire. Elle sera bientôt installée automatiquement."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Ouvrir sur le téléphone"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Connexion"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Se connecter avec Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-fr-rCA/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"Enregistrer l\'image"</string>
+<string name="s2" msgid="4550830452390689489">"Autoriser l\'annonce à stocker l\'image dans la galerie d\'images?"</string>
+<string name="s3" msgid="2435407834265420668">"Accepter"</string>
+<string name="s4" msgid="9167523597401839819">"Refuser"</string>
+<string name="s5" msgid="1566682516266724847">"Créer un événement dans l\'agenda"</string>
+<string name="s6" msgid="5996672174517137271">"Autoriser l\'annonce à créer un événement dans l\'agenda?"</string>
+<string name="s7" msgid="7163549807207034258">"Annonce test"</string>
 </resources>
