--- a/res/values-tl/values.xml
+++ b/res/values-tl/values.xml
@@ -3,4 +3,77 @@
 <!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/common/res/values-tl/strings.xml -->
 <eat-comment/>
 <string name="common_google_play_services_unknown_issue" msgid="2518680582564677258">"Nagkakaproblema ang <xliff:g id="APP_NAME">%1$s</xliff:g> sa mga serbisyo ng Google Play. Pakisubukang muli."</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/res/values-tl/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_notification_connected_message" msgid="5319032370587661362">"Nakakonekta sa <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_connecting_message" msgid="2758865089947797888">"Kumokonekta sa <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_notification_disconnect" msgid="5232008641593292969">"Idiskonekta"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/cast/framework/res/values-tl/cast_strings.xml -->
+<eat-comment/>
+<string name="cast_ad_label" msgid="4778414446709286370">"Ad"</string>
+<string name="cast_casting_to_device" msgid="366047012176970604">"Nagka-cast sa %1$s"</string>
+<string name="cast_closed_captions" msgid="2888745622334830481">"Mga closed caption"</string>
+<string name="cast_closed_captions_unavailable" msgid="4476421850100851087">"Hindi available ang mga closed caption"</string>
+<string name="cast_connecting_to_device" msgid="6769392312239056170">"Kumokonekta sa <xliff:g id="NAME">%1$s</xliff:g>"</string>
+<string name="cast_disconnect" msgid="4431992200264667209">"Idiskonekta"</string>
+<string name="cast_expanded_controller_ad_image_description" msgid="5668979866539349222">"Ipinapakitang larawan habang nagpe-play ng ad ang cast receiver"</string>
+<string name="cast_expanded_controller_ad_in_progress" msgid="9069517964239146855">"Nasa proseso ang paggawa ng ad..."</string>
+<string name="cast_expanded_controller_background_image" msgid="8886260998635257149">"Album art"</string>
+<string name="cast_expanded_controller_live_stream_indicator" msgid="1316611227831672183">"Live stream"</string>
+<string name="cast_expanded_controller_loading" msgid="7334411994450681286">"Naglo-load…"</string>
+<string name="cast_expanded_controller_skip_ad_label" msgid="8399595886048969508">"Laktawan"</string>
+<string name="cast_forward" msgid="7884080323096468593">"I-forward"</string>
+<string name="cast_forward_10" msgid="6424889955881797947">"I-forward nang sampung segundo"</string>
+<string name="cast_forward_30" msgid="7868672855975238403">"I-forward nang tatlumpung segundo"</string>
+<string name="cast_intro_overlay_button_text" msgid="6885943100773268783">"@android:string/ok"</string>
+<string name="cast_mute" msgid="5637297909372905371">"I-mute"</string>
+<string name="cast_pause" msgid="5308503786390460607">"I-pause"</string>
+<string name="cast_play" msgid="5906987965619702702">"I-play"</string>
+<string name="cast_rewind" msgid="1739665135565985480">"I-rewind"</string>
+<string name="cast_rewind_10" msgid="6432793028560778843">"I-rewind nang sampung segundo"</string>
+<string name="cast_rewind_30" msgid="4677199707225681325">"I-rewind nang tatlumpung segundo"</string>
+<string name="cast_seek_bar" msgid="9078075166993780241">"Kontrol sa paghahanap sa pag-playback"</string>
+<string name="cast_skip_next" msgid="3991548379225047363">"Lumaktaw sa susunod na item"</string>
+<string name="cast_skip_prev" msgid="8369073097776576935">"Lumaktaw sa nakaraang item"</string>
+<string name="cast_stop" msgid="9191388946729723891">"Ihinto"</string>
+<string name="cast_stop_live_stream" msgid="1219622777438777099">"Ihinto ang live stream"</string>
+<string name="cast_tracks_chooser_dialog_audio" msgid="4250321332248956563">"Audio"</string>
+<string name="cast_tracks_chooser_dialog_cancel" msgid="1162380934229249476">"Kanselahin"</string>
+<string name="cast_tracks_chooser_dialog_closed_captions" msgid="1779359505126875127">"Mga Nakasarang Caption"</string>
+<string name="cast_tracks_chooser_dialog_default_track_name" msgid="3012268736704635952">"Track <xliff:g id="POSITION">%1$d</xliff:g>"</string>
+<string name="cast_tracks_chooser_dialog_none" msgid="1176688358580178396">"Wala"</string>
+<string name="cast_tracks_chooser_dialog_ok" msgid="3804878371876790270">"OK"</string>
+<string name="cast_tracks_chooser_dialog_subtitles" msgid="2454147715032376208">"Mga Subtitle"</string>
+<string name="cast_unmute" msgid="2913461521603516868">"I-unmute"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/base/res/values-tl/strings.xml -->
+<eat-comment/>
+<string name="common_google_play_services_enable_button" msgid="8585111718777012708">"I-enable"</string>
+<string name="common_google_play_services_enable_text" msgid="7045129128108380659">"Hindi gagana ang <xliff:g id="APP_NAME">%1$s</xliff:g> maliban kung ie-enable mo ang mga serbisyo ng Google Play."</string>
+<string name="common_google_play_services_enable_title" msgid="3147157405986503375">"I-enable ang mga serbisyo ng Google Play"</string>
+<string name="common_google_play_services_install_button" msgid="9115728400623041681">"I-install"</string>
+<string name="common_google_play_services_install_text" msgid="8179894293032530091">"Hindi gagana ang <xliff:g id="APP_NAME">%1$s</xliff:g> nang wala ang mga serbisyo ng Google Play na wala sa iyong device."</string>
+<string name="common_google_play_services_install_title" msgid="7442193194585196676">"Kunin ang mga serbisyo ng Google Play"</string>
+<string name="common_google_play_services_notification_ticker" msgid="180394615667698242">"Error sa Mga Serbisyo ng Google Play"</string>
+<string name="common_google_play_services_unsupported_text" msgid="5501187292256987189">"Hindi gagana ang <xliff:g id="APP_NAME">%1$s</xliff:g> nang wala ang mga serbisyo ng Google Play, na hindi nasusuportahan ng iyong device."</string>
+<string name="common_google_play_services_update_button" msgid="8172070149091615356">"I-update"</string>
+<string name="common_google_play_services_update_text" msgid="7773943415006962566">"Hindi gagana ang <xliff:g id="APP_NAME">%1$s</xliff:g> maliban kung i-a-update mo ang mga serbisyo ng Google Play."</string>
+<string name="common_google_play_services_update_title" msgid="8706675115216073244">"I-update ang mga serbisyo ng Google Play"</string>
+<string name="common_google_play_services_updating_text" msgid="7894275749778928941">"Hindi gagana ang <xliff:g id="APP_NAME">%1$s</xliff:g> nang wala ang mga serbisyo ng Google Play na kasalukuyang ina-update."</string>
+<string name="common_google_play_services_wear_update_text" msgid="2804989272736383918">"Kailangan ang bagong bersyon ng mga serbisyo ng Google Play. Mag-a-update itong mag-isa sa ilang sandali."</string>
+<string name="common_open_on_phone" msgid="5201977337835724196">"Buksan sa telepono"</string>
+<string name="common_signin_button_text" msgid="3441753203274453993">"Mag-sign in"</string>
+<string name="common_signin_button_text_long" msgid="669893613918351210">"Mag-sign in sa Google"</string>
+
+<!-- blaze-out/gcc-4.X.Y-crosstool-v18-hybrid-grtev4-k8-opt/genfiles/java/com/google/android/gmscore/integ/client/admob-impl/res/values-tl/strings.xml -->
+<eat-comment/>
+<string name="s1" msgid="368094699078615544">"I-save ang larawan"</string>
+<string name="s2" msgid="4550830452390689489">"Pahintulutan ang Ad na iimbak ang larawan sa Gallery ng larawan?"</string>
+<string name="s3" msgid="2435407834265420668">"Tanggapin"</string>
+<string name="s4" msgid="9167523597401839819">"Tanggihan"</string>
+<string name="s5" msgid="1566682516266724847">"Gumawa ng event sa kalendaryo"</string>
+<string name="s6" msgid="5996672174517137271">"Pahintulutan ang Ad na gumawa ng event sa kalendaryo?"</string>
+<string name="s7" msgid="7163549807207034258">"Pansubok na Ad"</string>
 </resources>
